[package]
name = "adventofcode2021"
authors = ["Jaime <jaimeliew1@gmail.com"]
version = "0.1.0"
edition = "2021"
default-run = "adventofcode2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "*"
lazy_static = "*"
rayon = "*"