[package]
name = "adventofcode2021"
authors = ["Jaime <jaimeliew1@gmail.com"]
version = "0.1.0"
edition = "2021"
default-run = "adventofcode2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
itertools = "0.10.3"
lazy_static = "1.4.0"
rayon = "1.5.1"